[package]
name = "todo"
version = "3.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-lib = {git = "https://github.com/kyllingene/todo-lib"}
sarge = {git = "https://github.com/kyllingene/sarge"}
dirs = "4.0.0"
