[package]
name = "todo"
version = "4.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-lib = { git = "https://github.com/kyllingene/todo-lib" }
sarge = "5.0"
dirs = "5.0"
errata = { version = "2.0", features = ["color"] }
